FAADEVBackup/force-app/main/default/objects/Knowledge__kav/fields/FAA_Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>FAA_Initial_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>