FAADEVBackup/force-app/main/default/objects/Knowledge__kav/fields/FAA_Submited_for_an_approval__c.field-meta.xml
<CustomField>
    <fullName>FAA_Submited_for_an_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submited for an approval</label>
    <type>Checkbox</type>
</CustomField>