FAADEVBackup/force-app/main/default/objects/Knowledge__kav/fields/FAA_UAS_Article_Link__c.field-meta.xml
<CustomField>
    <fullName>FAA_UAS_Article_Link__c</fullName>
    <description>Formula field, creates a Hyperlink to the knowledge Article record</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp;&quot;lightning/r/Knowledge__kav/&quot;&amp; Id &amp;&quot;/view&quot;, ArticleNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>