FAADEVBackup/force-app/main/default/objects/Knowledge__kav/recordTypes/FAA_Articles.recordType-meta.xml
<RecordType>
    <fullName>FAA_Articles</fullName>
    <active>true</active>
    <description>FAA Knowledge  Articles</description>
    <label>FAA Articles</label>
</RecordType>