FAADEVBackup/force-app/main/default/objects/Knowledge__kav/listViews/How_to_Register_a_Drone_with_the_FAA.listView-meta.xml
<ListView>
    <fullName>How_to_Register_a_Drone_with_the_FAA</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>How to Register a Drone with the FAA</label>
</ListView>